tony no likey. tony do it different.